c9m2 Block LOS under buses in the truck depot c8m3 Remove final fire particle effect after some time as it is not visible on low or medium shaders, and we want to remove the damage trigger Alternative weapon skins now have a chance of randomly spawning Updated global filters for witch removal Added template for sound related entities

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -101,7 +101,8 @@ add:
 	"spawnflags" "1"
 }
 ; --- Melee Weapons
-; --- NOTE: Use "any" for a random melee weapon
+; --- melee_weapon values: "Any" = any weapon in campaign mission files, baseball_bat, cricket_bat, crowbar
+; --- electric_guitar, fireaxe, frying_pan, golfclub, katana, knife, machete, pitchfork, shovel, tonfa
 add:
 {
 	"classname" "weapon_melee_spawn"
@@ -279,7 +280,6 @@ add:
 	"affectsFlow" "0"
 }
 
-
 ; #####################  REMOVE SCRIPT BASED CHANGES  ####################
 ; --- Use this method to remove changes applied by anv_* scripts
 ; --- Loading modified versions of official scripts will replace them and prevent changes from future updates from being applied to the server
@@ -298,4 +298,36 @@ add:
 {
 	"classname" "logic_auto"
 	"OnMapSpawn" "env_player_blocker,Kill,,15,-1"
+}
+
+; #####################  SOUNDS  ####################
+; --- Template for adding sounds to maps
+; --- Spawnflags: 1 = Play everywhere, 16 = Start Silent, 32 = Is NOT Looped
+add:
+{
+	"classname" "ambient_generic"
+	"origin" "[x y z]"
+	"message" "[sound file]"
+	"targetname" "[name]"
+	"spawnflags" "[n]"
+	"radius" "0"
+	"pitchstart" "100"
+	"pitch" "100"
+	"health" "10" ; --- Volume
+	"volstart" "10"
+}
+
+; --- Template to fade out loud/repeating sounds, e.g. alarms
+; --- Fade out event alarm sound after a few seconds
+modify:
+{
+	match:
+	{
+		"targetname" "[entity that triggers the sound]"
+	}
+	insert:
+	{
+		"[trigger input]" "[sound name],FadeOut,5,3,-1"
+		"[trigger input]" "[sound name],Kill,,10,-1"
+	}
 }
