--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -2,7 +2,12 @@
 ; ==                  WITCH REMOVAL                  ==
 ; ==           Remove scripted witch spawns          ==
 ; =====================================================
+; --- Uncomment to remove scripted witch spawns (e.g. Bride Witch)
 ;filter:
+;{
+;	"classname" "info_zombie_spawn"
+;	"population" "witch"
+;}
 ;{
 ;	"targetname" "witch_spawn"
 ;}
@@ -17,6 +22,7 @@
 ; ==                 ENTITY TYPE FIX                 ==
 ; ==     Fix entities using the wrong class type     ==
 ; =====================================================
+; --- Always 
 modify:
 ; --- Fix custom campaigns using the wrong physics prop type, which prevents our global fixes from being applied
 ; --- prop_physics_multiplayer is essentially a legacy entity that functions identically to prop_physics but serves no purpose in L4D2, it does not affect networking overhead
@@ -80,6 +86,16 @@ modify:
 	{
 		"PainPillDensity" "1"
 	}
+}
+
+; =====================================================
+; ==                   WEAPON SKINS                  ==
+; ==  Use random skins, see weapon_skin_enabler.nut  ==
+; =====================================================
+add:
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "!self,RunScriptFile,weapon_skin_enabler,5,-1"
 }
 
 ; =====================================================
