--- a/cfg/stripper/maps/c10m3_ranchhouse.cfg
+++ b/cfg/stripper/maps/c10m3_ranchhouse.cfg
@@ -483,6 +483,11 @@ add:
 	"origin" "-2944 327 235"
 	"targetname" "los_church_map"
 }
+; --- Remove filing cabinets in the saferoom that prevent the door from opening inwards
+filter:
+{
+	"model" "models/props/cs_office/file_cabinet2.mdl"
+}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
