--- a/cfg/stripper/maps/c8m3_sewers.cfg
+++ b/cfg/stripper/maps/c8m3_sewers.cfg
@@ -286,6 +286,17 @@ modify:
 		"fogend" "2500"
 	}
 }
+; --- Remove final fire particle effect after some time as it is not visible on low or medium shaders, and we want to remove the damage trigger
+{
+	match:
+	{
+		"targetname" "gasstation_explosion_relay"
+	}
+	insert:
+	{
+		"OnTrigger" "pipe_fire_under,Stop,,65,-1"
+	}
+}
 ; --- Clipping on gas station debris to prevent getting stuck
 modify:
 {
@@ -609,7 +620,7 @@ modify:
 		"damagecap" "15"
 	}
 }
-; --- Remove gas station damage triggers once the fire has disappeared
+; --- Remove gas station damage trigger that lingers around long after the explosion
 filter:
 {
 	"targetname" "fire_pain_final"
