--- a/cfg/stripper/maps/c9m2_lots.cfg
+++ b/cfg/stripper/maps/c9m2_lots.cfg
@@ -545,6 +545,43 @@ modify:
 		"OnFullyOpen" "escape_vehicle_step_b,AddOutput,origin 8003 6363 53,0,-1"
 	}
 }
+; --- Block LOS under buses in the truck depot
+add:
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "los_depot_bus_1a,AddOutput,mins -230 -1 -13,0,-1"
+	"OnMapSpawn" "los_depot_bus_1a,AddOutput,maxs 230 1 13,0,-1"
+	"OnMapSpawn" "los_depot_bus_1a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "los_depot_bus_1b,AddOutput,mins -1 -45 -13,0,-1"
+	"OnMapSpawn" "los_depot_bus_1b,AddOutput,maxs 1 45 13,0,-1"
+	"OnMapSpawn" "los_depot_bus_1b,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "los_depot_bus_2a,AddOutput,mins -230 -1 -13,0,-1"
+	"OnMapSpawn" "los_depot_bus_2a,AddOutput,maxs 230 1 13,0,-1"
+	"OnMapSpawn" "los_depot_bus_2a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "los_depot_bus_2b,AddOutput,mins -1 -45 -13,0,-1"
+	"OnMapSpawn" "los_depot_bus_2b,AddOutput,maxs 1 45 13,0,-1"
+	"OnMapSpawn" "los_depot_bus_2b,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "7852 5742 60"
+	"targetname" "los_depot_bus_1a"
+}
+{
+	"classname" "func_brush"
+	"origin" "8069 5740 60"
+	"targetname" "los_depot_bus_1b"
+}
+{
+	"classname" "func_brush"
+	"origin" "7828 5630 60"
+	"targetname" "los_depot_bus_2a"
+}
+{
+	"classname" "func_brush"
+	"origin" "8045 5628 60"
+	"targetname" "los_depot_bus_2b"
+}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
