Completed work on c10m4 c2m2 Fixed a potential issue causing the forklift by the ladder choke to not spawn Lighting origin template

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -49,6 +49,14 @@ add:
 	"solid" "6"
 	"fadescale" "0"
 }
+; --- To fix issues with lighting on props use an info_target at the location where the prop should get its lighting from
+; --- Add the following key value to the prop to make use of the info_target:
+; --- "lightingorigin" "[name]"
+{
+	"classname" "info_target"
+	"origin" "[x y z]"
+	"targetname" "[name]"
+}
 ; --- Ammo Piles
 add:
 {
