Completed work on c10m5

--- a/cfg/stripper/maps/c10m1_caves.cfg
+++ b/cfg/stripper/maps/c10m1_caves.cfg
@@ -165,7 +165,7 @@ add:
 	"origin" "-12414 -13170 -50"
 	"targetname" "los_saferoom_car2c"
 }
-; --- Make x cars by the tunnel entrance unhittable
+; --- Make 4 cars by the tunnel entrance unhittable
 filter:
 {
 	"targetname" "car_sedan4-car_physics"
@@ -330,7 +330,7 @@ add:
 ; ==      Block intentionally performed exploits     ==
 ; =====================================================
 add:
-; --- Block being able to skip the ladder choke by jumping across the bridge
+; --- Block survivors from being able to skip the ladder choke by jumping across the bridge
 {
 	"classname" "env_physics_blocker"
 	"origin" "-12326 -11683 524"
@@ -370,7 +370,7 @@ add:
 	"RefireTime" "2"
 	"OnTimer" "bridge_skip_blocker_trigger,TouchTest,,0,-1"
 }
-; --- Block a clip survivors can stand on at the end of the tunnel
+; --- Block survivors from standing on a clip at the end of the tunnel
 {
 	"classname" "env_physics_blocker"
 	"origin" "-13128 -5226 120"
@@ -656,7 +656,7 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Solidify railing by the left side ladder
+; --- Solidify railing on the left side ladder
 {
 	"classname" "prop_dynamic"
 	"origin" "-12910 -11073 -152.2"
