--- a/cfg/stripper/maps/c10m2_drainage.cfg
+++ b/cfg/stripper/maps/c10m2_drainage.cfg
@@ -195,8 +195,12 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
-; --- Remove fallen oil barrel in tunnel after the event
+; --- Remove the blinding light sprite above the saferoom door
 filter:
+{
+	"hammerid" "857162"
+}
+; --- Remove fallen oil barrel in tunnel after the event
 {
 	"hammerid" "988448"
 }
@@ -248,7 +252,7 @@ modify:
 add:
 {
 	"classname" "logic_auto"
-	; --- Clips on the pipes in the tunnel
+	; --- Clips on the surf pipes in the tunnel
 	"OnMapSpawn" "anv_mapfixes_smoother_pipes1,Kill,,15,-1"
 	"OnMapSpawn" "anv_mapfixes_smoother_pipes2,Kill,,15,-1"
 	"OnMapSpawn" "anv_mapfixes_smoother_pipes3,Kill,,15,-1"
@@ -312,7 +316,7 @@ add:
 	"normal.z" "0.00"
 	"team" "2"
 }
-; --- Infected ladder to climb up to the walkway above the ladder
+; --- Infected ladder to climb up to the walkway at the end of the event
 {
 	"classname" "func_simpleladder"
 	"origin" "-1215 -13942.5 -507.5"
