--- a/cfg/stripper/maps/c10m3_ranchhouse.cfg
+++ b/cfg/stripper/maps/c10m3_ranchhouse.cfg
@@ -179,7 +179,7 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Block high tickrate jump to get onto the walkway from below
+; --- Block high tickrate jumps to get onto the walkway from below
 {
 	"classname" "env_physics_blocker"
 	"origin" "-12347 -5997 78"
