--- a/cfg/stripper/maps/c10m4_mainstreet.cfg
+++ b/cfg/stripper/maps/c10m4_mainstreet.cfg
@@ -259,7 +259,7 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Block big awning on florist shop
+; --- Block survivors from standing on the florist shop awning.
 {
 	"classname" "env_physics_blocker"
 	"origin" "136 -1924 920"
@@ -370,6 +370,15 @@ add:
 	"origin" "5208 -5376 -51"
 	"mins" "-168 -288 -13"
 	"maxs" "168 288 13"
+	"initialstate" "1"
+	"BlockType" "2"
+}
+; --- Block infected being able to go in the room behind the end saferoom
+{
+	"classname" "env_physics_blocker"
+	"origin" "1424 -5512 -2"
+	"mins" "-32 -8 -54"
+	"maxs" "32 8 54"
 	"initialstate" "1"
 	"BlockType" "2"
 }
@@ -576,7 +585,7 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
-; --- Clipping on TLS added delivery van to fix glitchyness
+; --- Clipping on delivery van added by TLS to fix collsion issues
 {
 	"classname" "env_physics_blocker"
 	"origin" "509 -2543 6"
@@ -632,7 +641,7 @@ filter:
 {
 	"hammerid" "1191781"
 }
-; --- Clipping on pavement tiles on event street
+; --- Clipping for infected on pavement tiles on event street
 add:
 {
 	"classname" "env_physics_blocker"
