Added static witch spawns and witch flow blocks c4m1 Blocked tank between 0-20% (no change on Zonemod) c1m3 Make the office chair used for the return shortcut solid Removed static upgrade pack spawns Fixed issue with static ashtray stands being removed c1m3 Fixed horde not stopping after pressing the button cdta4 Fixed event not stopping when the train reaches the end of the bridge c10m4 Remove trash can in the middle of the street before the florist c9m2 Solidify police barricade by the crashed bus c9m2 Adjusted unhittable car by warehouses c9m1 Removed 2 additional cars by the saferoom

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -269,9 +269,8 @@ add:
 ; --- func_nav_blocker can be used to block or unblock nav mesh regions to improve pathing around obstacles or prevent issues with nav connections
 ; --- Once placed these entities must be activated by firing either BlockNav or UnblockNav after a small delay
 ; --- teamToBlock defines which team's navs are affected, -1 = everyone, 2 = survivors, 3 = infected
-; --- affectsFlow can be used when flow gets recalculated when the nav blocker is enabled or disabled, but it should only be used where the blocker will ALWAYS be the same for both teams
-; --- Recommended to leave at 0
-; --- As it potentially causes issues with uneven tank spawns when one team may not activate the blocker but the other team does
+; --- affectsFlow causes flow to be recalculated when the nav blocker is enabled/disabled
+; --- Highly recommended to set to 0, as it can cause issues with flow/tank spawn differences, it should only be used when a route is entirely changed/blocked off
 add:
 {
 	"classname" "logic_auto"
