--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -1352,6 +1352,15 @@ filter:
 {
 	"classname" "weapon_upgradepack_incendiary_spawn"
 }
+{
+	"classname" "upgrade_laser_sight"
+}
+{
+	"classname" "upgrade_ammo_explosive"
+}
+{
+	"classname" "upgrade_ammo_incendiary"
+}
 ; --- Explosive Fuel Barrels
 filter:
 {
@@ -1897,6 +1906,7 @@ filter:
 {
 	"classname" "prop_physics"
 	"model" "models/props_urban/ashtray_stand001.mdl"
+	"spawnflags" "256"
 }
 {
 	"classname" "prop_physics"
