--- a/cfg/stripper/maps/c10m4_mainstreet.cfg
+++ b/cfg/stripper/maps/c10m4_mainstreet.cfg
@@ -636,8 +636,12 @@ add:
 	"origin" "626 -2371 -38"
 	"targetname" "los_delivery_van_TLS_c"
 }
-; --- Remove garbage can in the parking lot before the offices
+; --- Remove trash can in the middle of the street before the florist
 filter:
+{
+	"hammerid" "4048397"
+}
+; --- Remove garbage can in the parking lot before the offices
 {
 	"hammerid" "1191781"
 }
