--- a/cfg/stripper/maps/c1m3_mall.cfg
+++ b/cfg/stripper/maps/c1m3_mall.cfg
@@ -23,6 +23,10 @@ modify:
 	{
 		"OnPressed" "directorBeginScriptc1_mall_crescendo_cooldown0-1"
 	}
+	insert:
+	{
+		"OnPressed" "director,EndScript,,0,-1"
+	}
 }
 ; --- Force survivors to always take the lower path leading to the event
 modify:
@@ -336,6 +340,18 @@ add:
 ; ==                 NUISANCE CHANGES                ==
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
+; --- Make the office chair used for the return shortcut solid
+modify:
+{
+	match:
+	{
+		"hammerid" "1553193"
+	}
+	replace:
+	{
+		"spawnflags" "256"
+	}
+}
 ; --- Remove glass that looks like leftover beta content hiding inside another glass panel
 filter:
 {
