--- a/cfg/stripper/maps/c9m1_alleys.cfg
+++ b/cfg/stripper/maps/c9m1_alleys.cfg
@@ -213,8 +213,8 @@ modify:
 ; ==                 HITTABLE CHANGES                ==
 ; ==           Add/remove/modify hittables           ==
 ; =====================================================
-; --- Reduced number of hittable cars (was 44 cars, now 26)
-; --- By the saferoom (was 11 cars, now 5)
+; --- Reduced number of hittable cars (was 44 cars, now 24)
+; --- By the saferoom (was 11 cars, now 3)
 filter:
 {
 	"targetname" "car01"
@@ -228,6 +228,19 @@ filter:
 {
 	"parentname" "car_sedan5-car_physics"
 }
+{
+	"targetname" "car_sedan3-car_physics"
+}
+{
+	"parentname" "car_sedan3-car_physics"
+}
+{
+	"targetname" "car_hatchback10-car_physics"
+}
+{
+	"parentname" "car_hatchback10-car_physics"
+}
+; --- Replaced cars
 {
 	"targetname" "car_hatchback11-car_physics"
 }
