--- a/cfg/stripper/maps/c9m2_lots.cfg
+++ b/cfg/stripper/maps/c9m2_lots.cfg
@@ -402,7 +402,7 @@ add:
 {
 	"classname" "prop_dynamic"
 	"origin" "4642 1942 -118"
-	"angles" "0 302 0"
+	"angles" "-1 302 -2"
 	"model" "models/props_vehicles/cara_82hatchback.mdl"
 	"solid" "6"
 	"disableshadows" "1"
@@ -410,7 +410,7 @@ add:
 {
 	"classname" "prop_dynamic"
 	"origin" "4642 1942 -118"
-	"angles" "0 302 0"
+	"angles" "-1 302 -2"
 	"model" "models/props_vehicles/cara_82hatchback_glass.mdl"
 	"solid" "6"
 	"disableshadows" "1"
@@ -514,6 +514,25 @@ add:
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
 add:
+; --- Solidify police barricade by the crashed bus
+{
+	"classname" "prop_dynamic"
+	"origin" "5237 -18 -216"
+	"angles" "0 63.5 0"
+	"model" "models/props_street/police_barricade.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "5283 -39 -216"
+	"angles" "0 63.5 0"
+	"model" "models/props_street/police_barricade.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
 ; --- Clipping to fix players needing to jump to get in the escape vehicle
 {
 	"classname" "env_physics_blocker"
