--- a/cfg/stripper/maps/cdta_04onarail.cfg
+++ b/cfg/stripper/maps/cdta_04onarail.cfg
@@ -31,6 +31,10 @@ modify:
 	{
 		"OnPass" "directorBeginScriptcdta04_passive15-1"
 	}
+	insert:
+	{
+		"OnPass" "director,EndScript,,15,-1"
+	}
 }
 ; --- Make the train car event faster
 {
