Completed work on Dead Air Finales for c6, c7, c9, c10, c11, c12, c14 - Updated for pill spawn fixes and map transition changes

--- a/cfg/stripper/maps/c10m5_houseboat.cfg
+++ b/cfg/stripper/maps/c10m5_houseboat.cfg
@@ -15,6 +15,55 @@
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
+; --- Fix finale pills disappearing (confoglcompmod issue)
+filter:
+{
+	"classname" "weapon_item_spawn"
+}
+{
+	"classname" "weapon_pain_pills_spawn"
+}
+modify:
+{
+	match:
+	{
+		"hammerid" "2242167"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "2242169"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "2242171"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "2242173"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+}
 
 ; =====================================================
 ; ==                STATIC AMMO PILES                ==
