--- a/cfg/stripper/maps/c11m2_offices.cfg
+++ b/cfg/stripper/maps/c11m2_offices.cfg
@@ -167,7 +167,7 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Block survivors from being able to jump on an infected ladder at the 2nd plank crossing
+; --- Block survivors from being able to jump on an infected ladder at the 2nd plank crossing to skip the offices
 {
 	"classname" "env_physics_blocker"
 	"origin" "9624 3781 960"
