--- a/cfg/stripper/maps/c11m3_garage.cfg
+++ b/cfg/stripper/maps/c11m3_garage.cfg
@@ -130,7 +130,7 @@ filter:
 {
 	"hammerid" "5725089"
 }
-; --- Make the pickup truck after the event unhittable
+; --- Make the pickup truck before the power station unhittable
 filter:
 {
 	"targetname" "utility_truck01"
@@ -908,7 +908,7 @@ modify:
 ; ==       New props for balance and SI spawns       ==
 ; =====================================================
 add:
-; --- Boxes outside the saferoom
+; --- Boxes outside the starting saferoom
 {
 	"classname" "prop_dynamic"
 	"origin" "-5155 -3394 16"
@@ -917,7 +917,7 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Ramp on one way drop fence by the saferoom (Fade distance needs to be set in this area)
+; --- Ramp on one way drop fence by the saferoom
 {
 	"classname" "prop_dynamic"
 	"origin" "-6025 -2200 166"
@@ -967,7 +967,7 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
-; --- Wire spools in red room before the airport entrance, in place of the removed forklift
+; --- Wire spools in boiler room before the airport entrance, in place of the removed forklift
 {
 	"classname" "prop_dynamic"
 	"origin" "-3275 2249 16"
@@ -1009,7 +1009,7 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Fences in garage section to force survivors down a longer path
+; --- Fences blocking the path after the ramp in the garage to force survivors around on a longer path.
 {
 	"classname" "prop_dynamic"
 	"origin" "-2646 4768 148"
@@ -1133,7 +1133,7 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Airport phones on the walkway
+; --- Phone booths on the walkway
 {
 	"classname" "prop_dynamic"
 	"origin" "-1532 3296 296"
@@ -1281,7 +1281,7 @@ add:
 	"OnMapSpawn" "anv_mapfixes_yeswayfence_wall,Kill,,15,-1"
 	"OnMapSpawn" "anv_mapfixes_yeswayfence1st_clip,Kill,,15,-1"
 	"OnMapSpawn" "anv_mapfixes_yeswayfence2nd_clip,Kill,,15,-1"
-	; --- Hittable atomizer on garage door, since the forklift cannot fully block it
+	; --- Hittable atomizer on the power station garage door, since the forklift cannot fully block it
 	"OnMapSpawn" "anv_mapfixes_atomizer_bsp_forkliftgate_trigmult,Kill,,15,-1"
 	; --- Breakable crate in room by end saferoom
 	"OnMapSpawn" "anv_mapfixes_losblocker_closetcrate,Kill,,15,-1"
