--- a/cfg/stripper/maps/c11m4_terminal.cfg
+++ b/cfg/stripper/maps/c11m4_terminal.cfg
@@ -3,6 +3,14 @@
 ; ==          DIRECTOR & EVENT MODIFICATION          ==
 ; ==       Modify director behaviour and events      ==
 ; =====================================================
+; --- Create infected filter for use across the map
+add:
+{
+	"classname" "filter_activator_team"
+	"targetname" "filter_infected"
+	"Negated" "Allow entities that match criteria"
+	"filterteam" "3"
+}
 ; --- Remove scripted common spawns from both events
 filter:
 {
@@ -40,7 +48,7 @@ modify:
 add:
 {
 	"classname" "prop_dynamic"
-	"origin" "3145 3233 152"
+	"origin" "3145 3089 152"
 	"angles" "0 180 0"
 	"model" "models/props_equipment/security_desk1.mdl"
 	"solid" "6"
@@ -50,7 +58,7 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "3148 3240 187"
+	"origin" "3148 3096 187"
 	"angles" "0 180 0"
 	"model" "models/props_fairgrounds/gallery_button.mdl"
 	"solid" "0"
@@ -61,7 +69,7 @@ add:
 }
 {
 	"classname" "script_func_button"
-	"origin" "3140 3233 193"
+	"origin" "3140 3089 193"
 	"angles" "0 0 0"
 	"extent" "7 11 7"
 	"spawnflags" "1025"
@@ -254,7 +262,7 @@ add:
 ; ==  Block players getting outside / under the map  ==
 ; =====================================================
 add:
-; --- Block infected from going out of bounds after the conference rooms
+; --- Block infected from going out of bounds behind the debris after the conference rooms
 {
 	"classname" "env_physics_blocker"
 	"origin" "-916 5736 544"
@@ -307,7 +315,7 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
-; --- Clippintg on dead bodies by the van event
+; --- Clipping on dead bodies by the van event
 {
 	"classname" "env_physics_blocker"
 	"origin" "-474 4500 22"
@@ -340,26 +348,6 @@ add:
 	"maxs" "18 30 4"
 	"initialstate" "1"
 	"BlockType" "0"
-}
-; --- Auto crouch trigger on van event fence, replaces TLS version
-{
-	"classname" "logic_auto"
-	"OnMapSpawn" "autocrouch_barricade_van,AddOutput,mins -52 -12 -13,0,-1"
-	"OnMapSpawn" "autocrouch_barricade_van,AddOutput,maxs 52 12 13,0,-1"
-	"OnMapSpawn" "autocrouch_barricade_van,AddOutput,solid 2,0,-1"
-}
-{
-	"classname" "trigger_playermovement"
-	"origin" "-284 3523 179"
-	"targetname" "autocrouch_barricade_van"
-	"spawnflags" "2049"
-	"filtername" "filter_infected"
-}
-{
-	"classname" "filter_activator_team"
-	"targetname" "filter_infected"
-	"Negated" "Allow entities that match criteria"
-	"filterteam" "3"
 }
 ; --- Remove trash can by the end saferoom
 filter:
@@ -450,7 +438,7 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- ATM by the departure gates
+; --- ATM in the departure gates seating area
 {
 	"classname" "prop_dynamic"
 	"origin" "3139 3672 152"
@@ -459,7 +447,7 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Departures board by the departure gates bar
+; --- Departures board by the departures area bar
 {
 	"classname" "prop_dynamic"
 	"origin" "2660 3897 152"
@@ -692,6 +680,21 @@ filter:
 {
 	"classname" "trigger_push"
 }
+; --- Auto crouch trigger on van event fence, replaces TLS version
+add:
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "autocrouch_barricade_van,AddOutput,mins -52 -12 -13,0,-1"
+	"OnMapSpawn" "autocrouch_barricade_van,AddOutput,maxs 52 12 13,0,-1"
+	"OnMapSpawn" "autocrouch_barricade_van,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "trigger_playermovement"
+	"origin" "-284 3523 179"
+	"targetname" "autocrouch_barricade_van"
+	"spawnflags" "2049"
+	"filtername" "filter_infected"
+}
 
 
 ; #############  LADDER CHANGES AND FIXES  ############
@@ -720,6 +723,101 @@ add:
 	"model" "*117"
 	"normal.x" "0.00"
 	"normal.y" "1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder to climb in the hole above the broken baggage carousel
+{
+	"classname" "func_simpleladder"
+	"origin" "741 5646 80"
+	"angles" "0 180 0"
+	"model" "*104"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "352 4112 208"
+	"angles" "0 270 0"
+	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+; --- Auto crouch trigger to get in the hole
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "autocrouch_carousel_hole,AddOutput,mins -5 -24 -30,0,-1"
+	"OnMapSpawn" "autocrouch_carousel_hole,AddOutput,maxs 5 24 30,0,-1"
+	"OnMapSpawn" "autocrouch_carousel_hole,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "trigger_auto_crouch"
+	"origin" "348 4112 242"
+	"targetname" "autocrouch_carousel_hole"
+	"spawnflags" "1"
+	"filtername" "filter_infected"
+}
+; --- Infected ladders to climb onto the luggage conveyor belt
+{
+	"classname" "func_simpleladder"
+	"origin" "1941 2559 -52"
+	"angles" "0 90 0"
+	"model" "*104"
+	"normal.x" "0.00"
+	"normal.y" "1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "398 924 36"
+	"angles" "0 0 0"
+	"model" "*104"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "1941 2719 228"
+	"angles" "0 90 0"
+	"model" "*104"
+	"normal.x" "0.00"
+	"normal.y" "1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "-712 839 37"
+	"angles" "0 270 0"
+	"model" "*104"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder to climb up the duty free store
+{
+	"classname" "func_simpleladder"
+	"origin" "2933 3218 60"
+	"angles" "0 180 0"
+	"model" "*104"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "2933 3218 -56"
+	"angles" "0 180 0"
+	"model" "*104"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
 	"normal.z" "0.00"
 	"team" "2"
 }
