--- a/cfg/stripper/maps/c12m5_cornfield.cfg
+++ b/cfg/stripper/maps/c12m5_cornfield.cfg
@@ -15,12 +15,14 @@
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
-; --- Remove pill spawns
+; --- Fix finale pills disappearing (confoglcompmod issue)
 filter:
 {
 	"classname" "weapon_item_spawn"
 }
-; --- Fix finale pills disappearing
+{
+	"classname" "weapon_pain_pills_spawn"
+}
 modify:
 {
 	match:
