--- a/cfg/stripper/maps/c14m2_lighthouse.cfg
+++ b/cfg/stripper/maps/c14m2_lighthouse.cfg
@@ -58,6 +58,71 @@ modify:
 		"targetname" "not_coop_items"
 	}
 }
+; --- Fix finale pills disappearing / not being consistent (confoglcompmod issue)
+filter:
+{
+	"classname" "weapon_item_spawn"
+}
+{
+	"classname" "weapon_pain_pills_spawn"
+}
+modify:
+{
+	match:
+	{
+		"hammerid" "2560682"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+	delete:
+	{
+		"targetname" "versus_items"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "2560716"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+	delete:
+	{
+		"targetname" "versus_items"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "2560796"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+	delete:
+	{
+		"targetname" "versus_items"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "2560890"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+	delete:
+	{
+		"targetname" "versus_items"
+	}
+}
 
 ; =====================================================
 ; ==                STATIC AMMO PILES                ==
