--- a/cfg/stripper/maps/c6m3_port.cfg
+++ b/cfg/stripper/maps/c6m3_port.cfg
@@ -10,404 +10,81 @@
 ; ==                  SAFEROOM ITEMS                 ==
 ; ==    Saferoom item spawns - ammo piles, weapons   ==
 ; =====================================================
-; --- Add below disappearing item fix, any items above it will be filtered out
+; --- Ensure both T1 guns spawn in the saferoom
+modify:
+{
+	match:
+	{
+		"hammerid" "21242"
+	}
+	replace:
+	{
+		"weapon_selection" "tier1_shotgun"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "21252"
+	}
+	replace:
+	{
+		"weapon_selection" "any_smg"
+	}
+}
 
 ; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
-; --- Fix items disappearing for the second round - Remove and replace all items with (almost) identical properties
+; --- Fix finale pills disappearing (confoglcompmod issue)
 filter:
 {
 	"classname" "weapon_item_spawn"
 }
 {
-	"classname" "weapon_first_aid_kit_spawn"
+	"classname" "weapon_pain_pills_spawn"
+}
+modify:
+{
+	match:
+	{
+		"hammerid" "276559"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
 }
 {
-	"classname" "weapon_spawn"
+	match:
+	{
+		"hammerid" "276561"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
 }
 {
-	"classname" "weapon_pistol_spawn"
+	match:
+	{
+		"hammerid" "276563"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
 }
 {
-	"classname" "weapon_melee_spawn"
-}
-{
-	"classname" "weapon_ammo_spawn"
-}
-{
-	"classname" "weapon_rifle_spawn"
-}
-{
-	"classname" "weapon_rifle_ak47_spawn"
-}
-{
-	"classname" "weapon_autoshotgun_spawn"
-}
-{
-	"classname" "weapon_rifle_desert_spawn"
-}
-add:
-; --- Finale kits
-{
-	"origin" "-289.746 -830.231 39.183"
-	"solid" "6"
-	"angles" "90 347 0"
-	"classname" "weapon_first_aid_kit_spawn"
-	"hammerid" "276559"
-}
-{
-	"origin" "-290.746 -814.231 39.183"
-	"solid" "6"
-	"angles" "90 0 0"
-	"classname" "weapon_first_aid_kit_spawn"
-	"hammerid" "276561"
-}
-{
-	"origin" "-274.746 -813.231 36.183"
-	"solid" "6"
-	"angles" "0 0 0"
-	"classname" "weapon_first_aid_kit_spawn"
-	"hammerid" "276563"
-}
-{
-	"origin" "-275.746 -831.231 36.183"
-	"solid" "6"
-	"angles" "0 345.5 0"
-	"classname" "weapon_first_aid_kit_spawn"
-	"hammerid" "276565"
-}
-; --- Weapons
-; --- Ensure both a shotgun and SMG spawn in the saferoom + fix item disappearing
-{
-	"origin" "-2272 -490 -218"
-	"weapon_selection" "tier1_shotgun"
-	"solid" "6"
-	"count" "5"
-	"angles" "0 300 -90"
-	"classname" "weapon_spawn"
-	"hammerid" "21242"
-	"spawn_without_director" "1"
-	"spawnflags" "2"
-}
-{
-	"origin" "-2272 -522 -218"
-	"weapon_selection" "any_smg"
-	"solid" "6"
-	"count" "5"
-	"angles" "0 315 -90"
-	"classname" "weapon_spawn"
-	"hammerid" "21252"
-	"spawn_without_director" "1"
-	"spawnflags" "2"
-}
-{
-	"origin" "-673 -710 38.14"
-	;"targetname" "weapons_coop"
-	"spawnflags" "2"
-	"solid" "6"
-	"skin" "0"
-	"disableshadows" "1"
-	"count" "5"
-	"angles" "0 39 -90"
-	"classname" "weapon_spawn"
-	"hammerid" "8427"
-	"spawn_without_director" "1"
-	"spawnflags" "2"
-	"weapon_selection" "tier1_shotgun"
-}
-{
-	"origin" "-661 -724 38.898"
-	;"targetname" "weapons_coop"
-	"spawnflags" "2"
-	"solid" "6"
-	"skin" "0"
-	"disableshadows" "1"
-	"count" "5"
-	"angles" "0 219 90"
-	"classname" "weapon_spawn"
-	"hammerid" "8429"
-	"spawn_without_director" "1"
-	"spawnflags" "2"
-	"weapon_selection" "weapon_smg_silenced"
-}
-{
-	"origin" "-658 -673 39.14"
-	;"targetname" "weapons_coop"
-	"spawnflags" "2"
-	"solid" "6"
-	"skin" "0"
-	"disableshadows" "1"
-	"count" "5"
-	"angles" "0 204 -90"
-	"classname" "weapon_spawn"
-	"hammerid" "8431"
-	"spawn_without_director" "1"
-	"spawnflags" "2"
-	"weapon_selection" "weapon_smg"
-}
-; --- Bill's gun
-{
-	"origin" "-364 -1007 11.3106"
-	"weaponskin" "1"
-	;"targetname" "weapons_coop"
-	"spawnflags" "2"
-	"solid" "6"
-	"skin" "1"
-	"disableshadows" "1"
-	"count" "1"
-	"angles" "10.0466 132.231 -53.807"
-	"classname" "weapon_spawn"
-	"hammerid" "1349297"
-	"spawn_without_director" "1"
-	"spawnflags" "2"
-	"weapon_selection" "weapon_smg"
-}
-{
-	"origin" "-1335 1732 358.961"
-	"weapon_selection" "any_smg"
-	;"targetname" "weapons_coop"
-	"spawnflags" "2"
-	"spawn_without_director" "0"
-	"solid" "6"
-	"skin" "0"
-	"disableshadows" "1"
-	"count" "5"
-	"angles" "0 299.5 90"
-	"classname" "weapon_spawn"
-	"hammerid" "130119"
-	"spawn_without_director" "1"
-	"spawnflags" "2"
-}
-{
-	"origin" "-814 1006 194"
-	"weapon_selection" "tier1_any"
-	;"targetname" "weapons_coop"
-	"spawnflags" "2"
-	"spawn_without_director" "0"
-	"solid" "6"
-	"skin" "0"
-	"disableshadows" "1"
-	"count" "5"
-	"angles" "0 144 90"
-	"classname" "weapon_spawn"
-	"hammerid" "130037"
-	"spawn_without_director" "1"
-	"spawnflags" "2"
-}
-; --- Pistols
-{
-	"origin" "530 -636 45"
-	"solid" "6"
-	"count" "5"
-	"angles" "0 60 90"
-	"classname" "weapon_pistol_spawn"
-	"hammerid" "141076"
-	"spawn_without_director" "1"
-	"spawnflags" "2"
-}
-{
-	"origin" "622 -508 195"
-	"solid" "6"
-	"count" "5"
-	"angles" "0 60 90"
-	"classname" "weapon_pistol_spawn"
-	"hammerid" "141102"
-	"spawn_without_director" "1"
-	"spawnflags" "2"
-}
-{
-	"origin" "-696 372 168.868"
-	"solid" "6"
-	"count" "5"
-	"angles" "0 60 90"
-	"classname" "weapon_pistol_spawn"
-	"hammerid" "141142"
-	"spawn_without_director" "1"
-	"spawnflags" "2"
-}
-{
-	"origin" "-962 1016 64.8683"
-	"solid" "6"
-	"count" "5"
-	"angles" "0 210 90"
-	"classname" "weapon_pistol_spawn"
-	"hammerid" "141154"
-	"spawn_without_director" "1"
-	"spawnflags" "2"
-}
-{
-	"origin" "-1828 2040 194.868"
-	"solid" "6"
-	"count" "5"
-	"angles" "0 315 90"
-	"classname" "weapon_pistol_spawn"
-	"hammerid" "141226"
-	"spawn_without_director" "1"
-	"spawnflags" "2"
-}
-{
-	"origin" "1064 344 134.868"
-	"solid" "6"
-	"count" "5"
-	"angles" "0 345 90"
-	"classname" "weapon_pistol_spawn"
-	"hammerid" "141294"
-	"spawn_without_director" "1"
-	"spawnflags" "2"
-}
-{
-	"origin" "1365 -586 193"
-	"solid" "6"
-	"count" "5"
-	"angles" "0 315 90"
-	"classname" "weapon_pistol_spawn"
-	"hammerid" "496015"
-	"spawn_without_director" "1"
-	"spawnflags" "2"
-}
-{
-	"origin" "-1120 -408 193.868"
-	"solid" "6"
-	"count" "5"
-	"angles" "0 15 90"
-	"classname" "weapon_pistol_spawn"
-	"hammerid" "496085"
-	"spawn_without_director" "1"
-	"spawnflags" "2"
-}
-; --- Melee
-{
-	"origin" "-652 -440 1.612"
-	"spawnflags" "2"
-	"solid" "6"
-	"skin" "0"
-	"melee_weapon" "Any"
-	"disableshadows" "1"
-	"count" "1"
-	"angles" "0 150 -90"
-	"classname" "weapon_melee_spawn"
-	"hammerid" "8475"
-	"spawn_without_director" "1"
-}
-{
-	"origin" "-620 -439.42 2.612"
-	"spawnflags" "2"
-	"solid" "6"
-	"skin" "0"
-	"melee_weapon" "Any"
-	"disableshadows" "1"
-	"count" "1"
-	"angles" "0 120 -90"
-	"classname" "weapon_melee_spawn"
-	"hammerid" "8477"
-	"spawn_without_director" "1"
-}
-{
-	"origin" "1160 792 -55.7273"
-	"spawnflags" "2"
-	"solid" "6"
-	"skin" "0"
-	"model" "models/weapons/melee/w_frying_pan.mdl"
-	"melee_weapon" "Any"
-	"disableshadows" "1"
-	"count" "1"
-	"body" "0"
-	"angles" "0 270 -90"
-	"classname" "weapon_melee_spawn"
-	"hammerid" "119763"
-	"spawn_without_director" "1"
-}
-{
-	"origin" "-1358 -339 194.269"
-	"spawnflags" "2"
-	"solid" "6"
-	"skin" "0"
-	"melee_weapon" "Any"
-	"disableshadows" "1"
-	"count" "1"
-	"angles" "0 60 -90"
-	"classname" "weapon_melee_spawn"
-	"hammerid" "130159"
-	"spawn_without_director" "1"
-}
-{
-	"origin" "-618.77 99.727 1.2687"
-	"spawnflags" "2"
-	"solid" "6"
-	"skin" "0"
-	"melee_weapon" "crowbar"
-	"disableshadows" "1"
-	"count" "1"
-	"angles" "0 60 -90"
-	"classname" "weapon_melee_spawn"
-	"hammerid" "130191"
-	"spawn_without_director" "1"
-}
-{
-	"origin" "-2284.9 -546.781 -254.731"
-	"spawnflags" "2"
-	"solid" "6"
-	"skin" "0"
-	"melee_weapon" "Any"
-	"disableshadows" "1"
-	"count" "1"
-	"angles" "0 255 -90"
-	"classname" "weapon_melee_spawn"
-	"hammerid" "141066"
-	"spawn_without_director" "1"
-}
-{
-	"origin" "-2282 -512 -253.731"
-	"spawnflags" "2"
-	"solid" "6"
-	"skin" "0"
-	"melee_weapon" "Any"
-	"disableshadows" "1"
-	"count" "1"
-	"angles" "0 300 -90"
-	"classname" "weapon_melee_spawn"
-	"hammerid" "141068"
-	"spawn_without_director" "1"
-}
-{
-	"origin" "502 1796.45 201"
-	"spawnflags" "2"
-	"solid" "6"
-	"melee_weapon" "Any"
-	"disableshadows" "1"
-	"count" "1"
-	"angles" "0 330 -90"
-	"classname" "weapon_melee_spawn"
-	"hammerid" "218664"
-	"spawn_without_director" "1"
-}
-{
-	"origin" "-2376 -616 -254.731"
-	"spawnflags" "2"
-	"solid" "6"
-	"skin" "0"
-	"melee_weapon" "Any"
-	"disableshadows" "1"
-	"count" "1"
-	"angles" "0 210 -90"
-	"classname" "weapon_melee_spawn"
-	"hammerid" "276375"
-	"spawn_without_director" "1"
-}
-{
-	"origin" "-2412 -616 -254.731"
-	"spawnflags" "2"
-	"solid" "6"
-	"skin" "0"
-	"melee_weapon" "Any"
-	"disableshadows" "1"
-	"count" "1"
-	"angles" "0 180 -90"
-	"classname" "weapon_melee_spawn"
-	"hammerid" "276435"
-	"spawn_without_director" "1"
+	match:
+	{
+		"hammerid" "276565"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
 }
 
 ; =====================================================
@@ -436,31 +113,6 @@ add:
 	"disableshadows" "1"
 	"spawnflags" "2"
 	"count" "5"
-}
-; --- Disappearing item fix - Ammo piles
-{
-	"origin" "-288 -368 1"
-	"spawnflags" "2"
-	"solid" "6"
-	"skin" "0"
-	"model" "models/props/terror/ammo_stack.mdl"
-	"disableshadows" "1"
-	"count" "0"
-	"angles" "0 227.5 0"
-	"ammo" "0"
-	"classname" "weapon_ammo_spawn"
-	"hammerid" "8425"
-}
-{
-	"origin" "-2263 -561 -220"
-	"solid" "6"
-	"skin" "0"
-	"model" "models/props/terror/ammo_stack.mdl"
-	"count" "5"
-	"angles" "0 0 0"
-	"classname" "weapon_ammo_spawn"
-	"hammerid" "21399"
-	"spawnflags" "2"
 }
 
 ; =====================================================
