--- a/cfg/stripper/maps/c7m3_port.cfg
+++ b/cfg/stripper/maps/c7m3_port.cfg
@@ -43,6 +43,56 @@ modify:
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
+; --- Fix finale pills disappearing (confoglcompmod issue)
+filter:
+{
+	"classname" "weapon_item_spawn"
+}
+{
+	"classname" "weapon_pain_pills_spawn"
+}
+modify:
+{
+	match:
+	{
+		"hammerid" "2380092"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "2380094"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+
+}
+{
+	match:
+	{
+		"hammerid" "2380096"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "2380098"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+}
 
 ; =====================================================
 ; ==                STATIC AMMO PILES                ==
