--- a/cfg/stripper/maps/c9m2_lots.cfg
+++ b/cfg/stripper/maps/c9m2_lots.cfg
@@ -253,6 +253,55 @@ modify:
 		"spawn_without_director" "1"
 	}
 }
+; --- Fix finale pills disappearing (confoglcompmod issue)
+filter:
+{
+	"classname" "weapon_item_spawn"
+}
+{
+	"classname" "weapon_pain_pills_spawn"
+}
+modify:
+{
+	match:
+	{
+		"hammerid" "75335"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "75352"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "75354"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "826138"
+	}
+	replace:
+	{
+		"spawnflags" "2"
+	}
+}
 
 ; =====================================================
 ; ==                STATIC AMMO PILES                ==
