--- a/cfg/stripper/maps/c11m1_greenhouse.cfg
+++ b/cfg/stripper/maps/c11m1_greenhouse.cfg
@@ -468,7 +468,7 @@ add:
 	"OnMapSpawn" "anv_mapfixes_bustedwatertower_clip,Kill,,15,-1"
 	"OnMapSpawn" "anv_mapfixes_bustedwatertower_wrongwaya,Kill,,15,-1"
 	"OnMapSpawn" "anv_mapfixes_bustedwatertower_wrongwayb,Kill,,15,-1"
-	; --- Clip by one way drop - REPLACED
+	; --- Clip on ladder by one way drop - REPLACED
 	"OnMapSpawn" "anv_mapfixes_ladderqol_electricalbox,Kill,,15,-1"
 	; --- Clips on roof near end saferoom
 	"OnMapSpawn" "anv_mapfixes_yesdraw_longjump_clip,Kill,,15,-1"
@@ -489,7 +489,7 @@ add:
 ; ==              Add or change ladders              ==
 ; =====================================================
 add:
-; --- Infected ladders to stop infected getting perma-stuck out of bounds by the greenhouse
+; --- Infected ladders to stop infected getting perma-stuck out of bounds below the greenhouse
 {
 	"classname" "func_simpleladder"
 	"origin" "5593 -4495.5 -710.5"
@@ -545,7 +545,7 @@ add:
 	"solid" "0"
 	"disableshadows" "1"
 }
-; --- Infected ladder to climb on the roof left of the ladder
+; --- Infected ladder to climb on the roof to the left of the ladder choke
 {
 	"classname" "func_simpleladder"
 	"origin" "2111.5 -1738.5 0"
